<resources>
    <string name="app_name">Musical Nepal</string>
    <string name="music_gallery">Music Gallery</string>
    <string name="news_portals">News Portals</string>
    <string name="live_tvs">Live TVs</string>
    <string name="fm_radios">FM Radios</string>
    <string name="payment_activity_text">This is the payment activity page. To implement the payment activity In-app Billing API can be used. This has the following steps: 1. Add the in app billing library to the project. 2. Update AndroidManifest file. 3. Create the billing service and bind it. 4. Send and then handle the billing requests.</string>
    <string name="browse_activity_text">In Browse Activity hit songs from this week and many more other options can be presented to the user.</string>
    <string name="browse_activity_title">Today\'s Hits</string>
    <string name="kutu_ma_kutu_song_text">Kutu Ma Kutu Supari Dana</string>
    <string name="jaaga_lamka_chamka_song_text">Jaaga Lamka Chamka</string>
    <string name="simsime_panima_song_text">Simsime Panima</string>
    <string name="sajha_busma_song_text">Sajha Bus ma jo pani</string>
    <string name="rato_ra_chandra_song_text">Rato Ra Chandra Surya</string>
    <string name="playlists_text">Playlists</string>
    <string name="artists_text">Artists</string>
    <string name="albums_text">Albums</string>
    <string name="songs_text">Songs</string>
    <string name="library_title_text">Library</string>
    <string name="radio_text">Radio</string>
    <string name="search_text">Search</string>
    <string name="browse_text">Browse</string>
    <string name="store_text">Store</string>
    <string name="library_text">Library</string>
    <string name="album_name_text">Album Name</string>
    <string name="album_name_text_view_text">Songs for the above mentioned album shall be displayed here. Each of these songs could be clicked to play the song.</string>
    <string name="artist_text_view_text">Songs for the above named artist shall be displayed here. Each of these songs could be clicked to play the song.</string>
    <string name="butwal_radio_text">Butwal FM</string>
    <string name="tinau_radio_text">Tinau FM</string>
    <string name="rupandehi_radio_text">Rupandehi FM</string>
    <string name="kantipur_radio_text">Kantipur FM</string>
    <string name="tv_activity_title_text">Television Networks</string>
    <string name="image_tv_text">Image Television</string>
    <string name="nepal_tv_text">Nepal Television</string>
    <string name="kantipur_tv_text">Kantipur TV</string>
    <string name="avenues_tv_text">Avenues Television</string>
    <string name="cnn_text">CNN</string>
    <string name="fox_text">Fox News</string>
    <string name="walstreet_text">WalStreet</string>
    <string name="abc_text">ABC News</string>
    <string name="play_list_text">Songs in this play list shall be displayed here. Each of these songs could be clicked to play the song.</string>
    <string name="play_list_title_text">Play List Name</string>
    <string name="search_hint_text">Search your song with Google Search!</string>
    <string name="artist_name_text">Artist Name</string>
    <string name="fm_radios_title_text">Radio Stations</string>
    <string name="song_name_text">Music Name</string>
    <string name="news_title_text">News</string>
    <string name="main_activity_description_text">This is the main activity page, through whihc the user can navigate to appropriate menu items.</string>
    <string name="library_activity_description_text">This activity has the functionalities to play music.</string>
    <string name="home_button_text">Home</string>
    <string name="news_activity_description_text">This activity provides options to select various news sources. Clicking on each of the options above allows to navigate as intended.</string>
    <string name="fm_radio_activity_description_text">This activity contains the options to select the intended Radio options.</string>
    <string name="live_tvs_activity_description_text">This activity provides the options to select the appropriate television networks.</string>
    <string name="music_play_activity_description_text">This activity implements music play.</string>
    <string name="songs_activity_description_text">This activity has list of playable songs.</string>
    <string name="search_activity_title_text">Search Your Song</string>
    <string name="music_gallery_title_text">Songs</string>
    <string name="store_activity_title_text">Payment Activity</string>
</resources>
