<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FmRadioActivity">

    <TextView
        style="@style/activityTitleStyle"
        android:text="@string/fm_radios_title_text" />

    <TextView
        style="@style/descriptionTextViewStyle"
        android:text="@string/fm_radio_activity_description_text" />

    <TextView
        android:id="@+id/butwal_radio"
        style="@style/regularTextViewStyle"
        android:text="@string/butwal_radio_text" />

    <View style="@style/horizontalLineStyle" />

    <TextView
        android:id="@+id/tinau_radio"
        style="@style/regularTextViewStyle"
        android:text="@string/tinau_radio_text" />

    <View style="@style/horizontalLineStyle" />

    <TextView
        android:id="@+id/rupandehi_radio"
        style="@style/regularTextViewStyle"
        android:text="@string/rupandehi_radio_text" />

    <View style="@style/horizontalLineStyle" />

    <TextView
        android:id="@+id/kantipur_radio"
        style="@style/regularTextViewStyle"
        android:text="@string/kantipur_radio_text" />

    <View style="@style/horizontalLineStyle" />

    <Button
        android:id="@+id/home_button"
        style="@style/homeButtonStyle"
        android:text="@string/home_button_text" />

</LinearLayout>
